// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBarAndroid /> should render as <ProgressBarAndroid> when mocked 1`] = `
<AndroidProgressBar
  animating={true}
  indeterminate={true}
  styleAttr="Horizontal"
/>
`;

exports[`<ProgressBarAndroid /> should render as <ProgressBarAndroid> when not mocked 1`] = `
<AndroidProgressBar
  animating={true}
  indeterminate={true}
  styleAttr="Horizontal"
/>
`;

exports[`<ProgressBarAndroid /> should shallow render as <ForwardRef(ProgressBarAndroid)> when mocked 1`] = `
<ForwardRef(ProgressBarAndroid)
  animating={true}
  indeterminate={true}
  styleAttr="Horizontal"
/>
`;

exports[`<ProgressBarAndroid /> should shallow render as <ForwardRef(ProgressBarAndroid)> when not mocked 1`] = `
<ForwardRef(ProgressBarAndroid)
  animating={true}
  indeterminate={true}
  styleAttr="Horizontal"
/>
`;
